--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "faunadb": "^2.14.2",
-    "netlify": "^4.3.0",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -28,7 +27,7 @@
   "scripts": {
     "bootstrap": "netlify dev:exec ./functions/post/create-schema.js",
     "docs": "md-magic --path '**/*.md' --ignore 'node_modules'",
-    "start": "netlify dev",
+    "start": "npx netlify dev",
     "prebuild": "echo 'setup faunaDB' && npm run bootstrap",
     "build": "react-scripts build",
     "test": "react-scripts test",
